--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
 }
 
 /*MENÚ*/
-.contenedor-header{
+ .contenedor-header{
     position: fixed;
     width: 100%;
     top:0;
@@ -74,7 +74,15 @@ body{
     margin-left: 25px;
     cursor: pointer;
     display: none;   
-}
+} 
+
+
+/*MENU RESPONSIVE */
+ 
+
+
+
+
 
 /* SECCIÓN HOME */
 .home{
@@ -392,6 +400,7 @@ footer{
 /* SECCION RESPONSIVE */
 
  @media(max-width:980px) {
+    
   
     nav{
         display: none;
@@ -430,7 +439,51 @@ footer{
     }
 }
 
-@media(max-width:700px){
+@media(max-width:767px){
+    .contenedor-header{
+        position: fixed;
+        width: 100%;
+        top:0;
+        left: 15px;
+        z-index: 100;
+    }
+   
+
+    .contenedor-header header {
+        max-width: 80px;
+        width: 100%;
+        margin: auto;
+        display: flex;
+        justify-content:flex-end;
+        align-items:flex-end;
+        padding: 25px 10px;
+    
+    }
+  
+
+    .main-menu {
+        list-style: none;
+        margin-top: 0;
+        margin-bottom: 0;
+        padding-left: 0;
+    
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .main-menu__link{
+        color: #ffd13b;
+        text-transform: uppercase;
+        text-decoration: none;
+    }
+    
+    .main-menu__item{
+        padding: 1em;
+    }
+    
+
+    
     .acerca-de-mi .fila{
         display: flex;
     }
@@ -481,3 +534,51 @@ footer{
 .link__git{
     color: #FFFFFF;
 }
+
+/* @media (max-width: 767px) {
+    .contenedor-header header ul {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .contenedor-header header nav ul li a {
+      margin: 20px 0;
+    }
+  
+    .nav-responsive {
+      display: block;
+      position: absolute;
+      right: 20px;
+      top: 20px;
+      font-size: 30px;
+      cursor: pointer;
+    }
+  
+    .menu {
+      display: none;
+    }
+  
+    .menu.active {
+      display: block;
+      position: fixed;
+      top: 80px;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0, 0, 0, 0.9);
+      padding: 50px;
+      text-align: center;
+    }
+  
+    .menu.active ul {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .menu.active ul li a {
+      font-size: 30px;
+      margin: 20px 0;
+      color: #fff;
+    }
+  } */
