--- a/style.css
+++ b/style.css
@@ -22,49 +22,52 @@ body{
 }
 
 /*MENÚ*/
- .contenedor-header{
+.contenedor-header {
+display: flex;
+    justify-content: center;
+  
+    height: 50px;
+    display: flex;
+    justify-content: center;
     position: fixed;
     width: 100%;
-    top:0;
-    right: -250px;
-    z-index: 100;
-}
+    top: 0;
+    left: 0;
+  }
+  
+  /* .main-nav {
 
-.contenedor-header header {
-    max-width: 1100px;
-    width: 100%;
-    margin: auto;
+  }
+   */
+  .main-menu {
     display: flex;
-    justify-content:space-between;
-    align-items:center;
-    padding: 25px 10px;
-    
-
-}
-
-.contenedor-header header ul{
-    display: flex;
+    justify-content: space-between;
     list-style: none;
-    
-}
-
-.contenedor-header header ul li a {
-    
-    font-size: 18px;
-    text-align: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .main-menu__item {
+    margin: 0 10px;
+  }
+  
+  .main-menu__link {
     color: var(--color-gris);
-    margin: 0 25px;
-    padding: 3px;
-    transition: 2s;
+    /* display: inline-block; */
+    font-size: 16px;
+    font-weight: bold;
+    padding: 15px 20px;
     text-decoration: none;
-
-}
-
-.contenedor-header header nav ul li a:hover {
-    color: #ffd13b
-}
-
-.nav-responsive {
+    transition: all 0.3s ease-in-out;
+  }
+  
+.main-menu__link:hover {
+    color: #ffd13b;
+    text-shadow: 0px 0px 8px #ffffffda;
+    transform: scale(1.05);
+  }
+  /*MENU RESPONSIVE */
+ .nav-responsive {
     background-color: #1f1c1c;
     color: var(--color-gris);
     padding:  5px 10px;
@@ -73,147 +76,160 @@ body{
     margin-right: 0px;
     margin-left: 25px;
     cursor: pointer;
-    display: none;   
+    display: none ; 
 } 
-
-
-/*MENU RESPONSIVE */
- 
-
-
-
-
-
+  
 /* SECCIÓN HOME */
 .home{
     height:100vh ;
     color: var(--color-claro);
     display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    margin: auto;
+    margin-top: 3em;   
 }
 
-.home .contenido-banner{  
-   background-color: var(--color-negro);
-   max-width: 700px;
-   margin: auto;
-   text-align: center;
-   padding-top: 100px;
-   
-}
-.home .contenido-banner .img-desing{
-    
-    margin-top: 40px;
-    border: 5px solid #ffd13b;
+.img-desing{    
+    margin-top: 15em;
+    border: 2px solid #ffd13b;
     display: block;
-    width: 30%;
     margin: auto;
+    margin-top: 7em;
     border-radius: 100%;
 }
 
-.home .contenido-banner h2{
-    margin-top: 30px;
+.home h2{
+    margin-top: 1em;
     font-size: 35px;
     color: var(--color-gris);
-
 }
 
-.home .contenido-banner h1{
-    margin-top: 18px;
+h1{
     font-size: 60px;
-
+    margin: auto;
+    margin-top: 1.5em; 
 }
 
-.home .contenido-banner .redes a{
+.redes{
+    margin-top: 2em;
+}
+
+.home .redes a{
     color: var(--color-claro);
     display: inline-block;
     text-decoration: none;
-    width: 42px;
-    height: 42px;
-    line-height: 42px;
-    margin: 55px 45px;
+    margin: 55px 2.5em;
     font-size: 40px;
-    transition: .5s;
+    transition: all .5s ease-in-out;
 }
 
-.home .contenido-banner .redes a:hover{
-    transform: scale(1.5);
+.home .redes a:hover{
+    color:#e2b933;
+    text-shadow: 0px 0px 7px #ffffffda;
+    transform: scale(1.22);
 }
+.bxl-youtube {
+    font-size: 1.5em;
+    color:  var(--color-gris);
+}
+.bxl-youtube:hover{
+    color:#e2b933;
+}
+.bxl-instagram{ 
+    font-size: 1.5em;
+    color:  var(--color-gris);
+}
+.bxl-instagram:hover{
+    color:#e2b933;
+}
+.bxl-linkedin{ 
+    font-size: 1.5em;
+     color:  var(--color-gris);
+    }
+.bxl-linkedin:hover{
+    color:#e2b933;
+}
+
+
 
 /*ACERCA DE MÍ */
-
 
 .acerca-de-mi{
     color: var(--color-claro);
     padding: 10px 10px;
-    margin-top: 50px;
-    
-   
+    margin-top: 9em;
 }
-.acerca-de-mi .contenido-seccion{
-    max-width: 1100px ;
+.contenido-seccion{
+    max-width: 1000px ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     margin: auto;
     text-align: center;
 }
 
-.acerca-de-mi h2{
+.contenido-seccion h2{
     font-size: 45px;
     font-weight: 420;
     padding: 15px ;
+    margin-bottom: 1em;
 }
 
-.acerca-de-mi .contenido-seccion p {
+.contenido-seccion p {
    font-size: 18px;
    line-height: 22px;
    margin-bottom: 30px;
    color: var(--color-gris);
 }
 
-.acerca-de-mi .contenido-seccion p span{
+.contenido-seccion p span{
     color: var(--color-claro);
+    font-size: larger;
 }
 
 /*MIS HABILIDADES */
-#mis-habilidades{
+.mis-habilidades{
     color: var(--color-claro);
     padding: 100px 15px ;
     text-align: center;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-#mis-habilidades .titulo-seccion{
+.titulo-seccion{
     font-size: 45px;
     font-weight: 420;
     padding: 15px ;
-   
+    margin-bottom: 1em;   
 }
 
-#mis-habilidades .fila{
-    display: flex;
-    flex-direction:row;
-    justify-content: space-between;
-    max-width: 500px;
-    flex-wrap: wrap;
-    margin: 20px auto;
+.fila{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 5em;
 }
 
-#mis-habilidades .fila .habilidades{
+.habilidades{
     width: 250px;
     padding: 30px;
     transition: .5s;
     
 }
 
-#mis-habilidades .fila .habilidades:hover{
+.habilidades:hover{
     box-shadow: 5px 5px 10px var(--color-claro), -5px -5px 10px var(--color-claro);
 }
 
-#mis-habilidades .fila .habilidades h4{
+.habilidades h4{
     transition: .5s;
     font-size: 18px;
-    margin-bottom: 5px;
-    
+    margin-bottom: 5px;   
 }
 
-#mis-habilidades .fila .habilidades .icono{
+.habilidades .icono{
     display: inline-block;
     width: 95px;
     height: 95px;
@@ -225,10 +241,14 @@ body{
 
 /* EXPERIENCIA */
 
-#experiencia{
+.experiencia{
     color: var(--color-claro);
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    
+    justify-content: center;
+    align-content: center;
+    align-items: center;
 }
 
 .experiencia h2 {
@@ -266,11 +286,8 @@ td {
 .portfolio {
   color: var(--color-claro);
   padding: 50px 20px;
-}
+  max-width: 1300px;
 
-.portfolio .contenido-seccion{
-    max-width: 1100px;
-    margin: auto;
 }
 
 .portfolio  h2 {
@@ -279,39 +296,31 @@ td {
     padding: 20px 0px;
 }
 
-.portfolio .galeria{
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: space-evenly;
-  
+.galeria{
+    display: flex;
+    justify-content: space-around; 
 }
 
-.portfolio .galeria .proyecto {
+.proyecto {
     position: relative;
-    max-width: 310px;
+    max-width: 350px;
     height:fit-content;
     cursor: pointer;
-    
-
 }
-
-
-
-.portfolio .galeria .proyecto img {
-    width: 100%;
+.proyecto img {
+    width: 90%;
     display: block;
-
 }
 
-.portfolio .galeria .proyecto .overlay{
+.overlay{
  position: absolute;
  top: 0;
- width: 100%;
+ width: 90%;
  height: 100%;
- text-align: center;
  background: linear-gradient(rgba(40, 43, 43, 0.8), rgba(47, 51, 50, 0.8));
  display: flex;
  flex-direction: column;
+ text-align: center;
  justify-content: center;
  transition: 2s;
  font-size: 18px;
@@ -322,12 +331,10 @@ td {
 .portfolio .galeria .proyecto .overlay h3{
     margin-bottom: 20px;
     transition: 1s;
-
 }
 
 .portfolio .galeria .proyecto .overlay:hover{
     opacity: 1;
-
 }
 
 .portfolio .galeria .proyecto .overlay:hover h3{
@@ -336,41 +343,39 @@ td {
 
 /* CONTACTO */
 
-
-#contacto{
+.contacto{
     color: var(--color-claro);
-    padding: 100px 15px ;
+    padding: 50px 15px ;
     text-align: center;
     
 }
-#contacto .titulo-seccion{
+.titulo-seccion{
     font-size: 45px;
     font-weight: 420;
     padding: 15px ;
    
 }
 
-#contacto .fila{
+.fila__contact{
     display: flex;
-    flex-direction:row;
-    justify-content: space-between;
-    max-width: 500px;
-    flex-wrap: wrap;
+    max-width: 700px;
     margin: 20px auto;
+    align-content: center;
+    justify-content: space-around;
 }
 
-#contacto .fila .contacto-data{
+.contacto-data{
     width: 50%;
     padding: 30px;
-    transition: .5s;
-    
+    margin-right: 3em;
+    transition: .5s;    
 }
 
-#contacto .fila .contacto-data:hover{
+.contacto-data:hover{
     box-shadow: 5px 5px 10px var(--color-claro), -5px -5px 10px var(--color-claro);
 }
 
-#contacto .fila .contacto-data h4{
+.contacto-data h4{
     transition: .5s;
     font-size: 18px;
     margin-bottom: 12px;
@@ -378,7 +383,7 @@ td {
     
 }
 
-#contacto .fila .contacto-data .icono{
+.contacto-data .icono{
     display: inline-block;
     width: 100px;
     height: 100px;
@@ -398,189 +403,198 @@ footer{
 }
 
 /* SECCION RESPONSIVE */
-
- @media(max-width:980px) {
-    
-  
-    nav{
-        display: none;
-    }
-    .nav-responsive{
-        display: block;
-        /* right: 80%;
-        margin-top: 30px;
-        margin-left: -250px; */
-    
-    }
-    nav.responsive{
-        display: block;
-        position: absolute;
-        right: 100;
-        top: 55px;
-        background-color: transparent;
-        width: 200px;
-        
-
-    }
-    
-    nav.responsive ul{
-        display: block !important;
-
-    }
-
-    nav.responsive ul li{
-      border-bottom: 2px solid var(--color-gris);
-      max-width: 186px;
-      text-align: left;
-      padding: 10px 0;  
-    }
-    nav.responsive ul li a {
-        color: #ffd13b;
-    }
-}
-
 @media(max-width:767px){
-    .contenedor-header{
+
+.contenedor-header {   
+        display: flex;
+        justify-content: flex-end;
         position: fixed;
-        margin: auto;
-        max-width: 350px;
+        height: 40px;
         width: 100%;
-        top:0;
-        left: 0px;
-        z-index: 100;
-    }
-   
-
-    .contenedor-header header {
-        max-width: 80px;
-        width: 100%;
-        margin: auto;
-        display: flex;
-        justify-content:flex-end;
-        align-items:flex-end;
-        padding: 25px 10px;
+        top: 0;
+        left: 0;
+        }
     
+    .nav-responsive{
+        background-color: #1f1c1c;
+        color: var(--color-claro);
+        border-radius: 5px;
+        cursor: pointer;
+        display: inline-block;
     }
 
-  
-
-    .main-menu {
-        list-style: none;
-        margin-top: 0;
-        margin-bottom: 0;
-        padding-left: 0;
-       
-    }
-        
-    
-    .main-menu__link{
-        color: #ffd13b;
-        text-transform: uppercase;
-        text-decoration: none;
-    }
-    
-    .main-menu__item{
-        padding: 1em;
-        
-    }
-    
-
-    
-    .acerca-de-mi .fila{
-        display: flex;
-    }
-    .acerca-de-mi .fila .col{
-        display: flex;
-    }
-
-
-    .portfolio .galeria{
+    .fa-bars{
         display: block;
-        width: 100%;
     }
-    .portfolio .galeria .proyecto{
-        max-width: 100%;
+
+.main-menu{
+        background-color:var(--color-gris);
+        position: fixed;
+        top: 30px;
+        right: 0;
+        width: 30%;
+        min-height: calc(100vh - 30px);
+
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+        font-size: 1.5rem;
+
+        margin-right: -200%;
+
+        transition: margin-right 0.8s;
     }
-    .portfolio .galeria .proyecto img{
-        width: 100%;
-    }
-    #contacto .fila{
-        display: flex;
-        flex-direction:column;
-        justify-content: space-around;
-        max-width:400px;
-        flex-wrap: wrap;
-        margin-left: 80px;
-    }
-    
-    #contacto .fila .contacto-data{
-        width: 75%;
-        padding: 20px;
-        transition: .7s;
-        
-        
-    }
-    
-    #contacto .fila .contacto-data h4{
-        transition: .9s;
-        font-size: 12px;
-        margin-bottom: 10px;
-        color: var(--color-gris);
-        
-    }
-    
-   
-    
+
+.main-menu__link {
+    color: var(--color-claro);
+    /* display: inline-block; */
+    font-size: 16px;
+    font-weight: bold;
+    padding: 15px 20px;
+    text-decoration: none;
+    transition: all 0.3s ease-in-out;
+  }
+
+.menu_show{
+    margin-right: 0;
 }
 
-.link__git{
-    color: #FFFFFF;
+ /*SECCION HOME */
+ .home{
+    color: var(--color-claro);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    margin-top: 2em;
+    align-content: center;
+    max-width: 260px;
 }
 
-/* @media (max-width: 767px) {
-    .contenedor-header header ul {
-      flex-direction: column;
-      align-items: center;
+.img-desing{    
+    border: 2px solid #ffd13b;
+    display: block;
+    height: 100px;
+    margin: auto;
+    margin-top: 7em;
+    border-radius: 100%;
+}
+
+.home h2{
+    margin-top: 1em;
+    font-size: 25px;
+    color: var(--color-gris);
+}
+
+h1{text-align: center;
+    font-size: 35px;
+    margin: auto;
+    margin-top: 1.5em; 
+}
+
+.redes{
+    margin-top: 1em;
+}
+
+.home .redes a{
+    color: var(--color-claro);
+    display: inline-block;
+    text-decoration: none;
+    margin: 35px .5em;
+    font-size: 30px;
+    transition: all .5s ease-in-out;
+}
+
+.home .redes a:hover{
+    color:#e2b933;
+    text-shadow: 0px 0px 7px #ffffffda;
+    transform: scale(1.22);
+}
+.bxl-youtube {
+    font-size: 1em;
+    color:  var(--color-gris);
+}
+.bxl-youtube:hover{
+    color:#e2b933;
+}
+.bxl-instagram{ 
+    font-size: 1em;
+    color:  var(--color-gris);
+}
+.bxl-instagram:hover{
+    color:#e2b933;
+}
+.bxl-linkedin{ 
+    font-size: 1em;
+     color:  var(--color-gris);
     }
-  
-    .contenedor-header header nav ul li a {
-      margin: 20px 0;
-    }
-  
-    .nav-responsive {
-      display: block;
-      position: absolute;
-      right: 20px;
-      top: 20px;
-      font-size: 30px;
-      cursor: pointer;
-    }
-  
-    .menu {
-      display: none;
-    }
-  
-    .menu.active {
-      display: block;
-      position: fixed;
-      top: 80px;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: rgba(0, 0, 0, 0.9);
-      padding: 50px;
-      text-align: center;
-    }
-  
-    .menu.active ul {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .menu.active ul li a {
-      font-size: 30px;
-      margin: 20px 0;
-      color: #fff;
-    }
-  } */
+.bxl-linkedin:hover{
+    color:#e2b933;
+}
+
+/*ACERCA DE MI */
+.acerca-de-mi{
+    color: var(--color-claro);
+    padding: 10px 10px;
+    margin-top: 3em;
+}
+
+.contenido-seccion h2{
+    font-size: 35px;
+}
+
+/* MIS HABILIDADES */
+
+.titulo-seccion{
+    font-size: 35px;
+    font-weight: 420;
+    padding: 15px ;
+    margin-bottom: 1em;   
+}
+
+.fila{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 5em;
+}
+/* PORTFOLIO */
+
+.galeria{
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    flex-direction: column;
+    margin: auto;
+}
+
+.proyecto img {
+    width: 100%;
+    display: block;
+}
+
+
+/* CONTACTO */
+.fila__contact{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.contacto-data{
+    width: 100%;
+    padding: 30px;
+    margin: auto;
+    margin-top: 1.5em;
+    transition: .5s;    
+}
+
+
+
+
+}
+
+
