--- a/style.css
+++ b/style.css
@@ -215,8 +215,7 @@ h1{
 .habilidades{
     width: 250px;
     padding: 30px;
-    transition: .5s;
-    
+    transition: .5s;   
 }
 
 .habilidades:hover{
@@ -421,6 +420,7 @@ footer{
         border-radius: 5px;
         cursor: pointer;
         display: inline-block;
+        height: 28px;
     }
 
     .fa-bars{
@@ -428,22 +428,27 @@ footer{
     }
 
 .main-menu{
-        background-color:var(--color-gris);
-        position: fixed;
-        top: 30px;
-        right: 0;
-        width: 30%;
-        min-height: calc(100vh - 30px);
+position: fixed;
+    top: 27px;
+    right: 0;
+    width: 50%;
+    min-height: calc(100vh - 27px);
 
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 2rem;
-        font-size: 1.5rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    font-size: 1.5rem;
 
-        margin-right: -200%;
+    margin-right: -200%;
+    background: rgba(255, 255, 255, 0.31);
+    border-radius: 2px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(7.6px);
+    -webkit-backdrop-filter: blur(7.6px);
+    border: 1px solid rgba(255, 255, 255, 0.78);
 
-        transition: margin-right 0.8s;
+    transition: margin-right 0.8s;
     }
 
 .main-menu__link {
@@ -470,6 +475,7 @@ footer{
     margin-top: 2em;
     align-content: center;
     max-width: 260px;
+    height: 80%;
 }
 
 .img-desing{    
@@ -491,10 +497,6 @@ h1{text-align: center;
     font-size: 35px;
     margin: auto;
     margin-top: 1.5em; 
-}
-
-.redes{
-    margin-top: 1em;
 }
 
 .home .redes a{
@@ -557,6 +559,16 @@ h1{text-align: center;
     display: grid;
     grid-template-columns: 1fr;
     gap: 5em;
+}
+.habilidades{
+    width: 250px;
+    padding: 15px;
+    transition: .5s;   
+}
+
+/*EXPERIENCIA */
+.experiencia h2 {
+    font-size: 35px;
 }
 /* PORTFOLIO */
 
