--- a/style.css
+++ b/style.css
@@ -131,20 +131,14 @@ h1{
     text-shadow: 0px 0px 7px #ffffffda;
     transform: scale(1.22);
 }
-.bxl-youtube {
+.bxs-file-pdf {
     font-size: 1.5em;
     color:  var(--color-gris);
 }
-.bxl-youtube:hover{
+.bxs-file-pdf:hover{
     color:#e2b933;
 }
-.bxl-instagram{ 
-    font-size: 1.5em;
-    color:  var(--color-gris);
-}
-.bxl-instagram:hover{
-    color:#e2b933;
-}
+
 .bxl-linkedin{ 
     font-size: 1.5em;
      color:  var(--color-gris);
@@ -181,15 +175,12 @@ h1{
 
 .contenido-seccion p {
    font-size: 18px;
-   line-height: 22px;
+   line-height: 20px;
    margin-bottom: 30px;
    color: var(--color-gris);
+   letter-spacing: 2px;
 }
 
-.contenido-seccion p span{
-    color: var(--color-claro);
-    font-size: larger;
-}
 
 /*MIS HABILIDADES */
 .mis-habilidades{
@@ -209,7 +200,7 @@ h1{
 
 .fila{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 5em;
 }
 
@@ -229,7 +220,7 @@ h1{
     margin-bottom: 5px;   
 }
 
-.habilidades .icono{
+.habilidades .icon{
     display: inline-block;
     width: 95px;
     height: 95px;
@@ -237,6 +228,7 @@ h1{
     background-color: #1f1c1c;
     padding: 18px;
     margin-bottom: 20px;
+    font-size: 55px;
 }
 
 /* EXPERIENCIA */
