--- a/style.css
+++ b/style.css
@@ -231,6 +231,8 @@ h1{
     font-size: 55px;
 }
 
+
+
 /* EXPERIENCIA */
 
 .experiencia{
@@ -273,65 +275,80 @@ td {
     font-weight: bold;
 }
 
+
+
 /* PORTFOLIO */
 
 .portfolio {
-  color: var(--color-claro);
-  padding: 50px 20px;
-  max-width: 1300px;
-
-}
-
-.portfolio  h2 {
+    color: var(--color-claro);
+    padding: 50px 20px;
+    max-width: 1300px;
+  }
+  
+  .portfolio h2 {
     font-size: 45px;
     text-align: center;
     padding: 20px 0px;
-}
-
-.galeria{
-    display: flex;
-    justify-content: space-around; 
-}
-
-.proyecto {
+  }
+  
+  .galeria {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 5px;
+  }
+  
+  .proyecto {
     position: relative;
-    max-width: 350px;
-    height:fit-content;
+    width: 320px;
+    height: fit-content;
+    height: 300px;
     cursor: pointer;
-}
-.proyecto img {
-    width: 90%;
+  }
+  
+  .proyecto img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     display: block;
-}
-
-.overlay{
- position: absolute;
- top: 0;
- width: 90%;
- height: 100%;
- background: linear-gradient(rgba(40, 43, 43, 0.8), rgba(47, 51, 50, 0.8));
- display: flex;
- flex-direction: column;
- text-align: center;
- justify-content: center;
- transition: 2s;
- font-size: 18px;
- letter-spacing: 3px;
- opacity: 0;
-}
-
-.portfolio .galeria .proyecto .overlay h3{
+    opacity: .7;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(40, 43, 43, 0.8), rgba(47, 51, 50, 0.8));
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    transition: 2s;
+    font-size: 18px;
+    letter-spacing: 3px;
+    opacity: 0;
+  }
+  
+  .portfolio .galeria .proyecto a {
+    text-decoration: none;
+  }
+  
+  .portfolio .galeria .proyecto .overlay h3 {
     margin-bottom: 20px;
     transition: 1s;
-}
-
-.portfolio .galeria .proyecto .overlay:hover{
+    color: var(--color-gris);
+  }
+  
+  .portfolio .galeria .proyecto .overlay:hover {
     opacity: 1;
-}
-
-.portfolio .galeria .proyecto .overlay:hover h3{
+  }
+  
+  .portfolio .galeria .proyecto .overlay:hover h3 {
     margin-bottom: 0;
-}
+  }
+  
+
 
 /* CONTACTO */
 
@@ -339,7 +356,7 @@ td {
     color: var(--color-claro);
     padding: 50px 15px ;
     text-align: center;
-    
+   
 }
 .titulo-seccion{
     font-size: 45px;
