--- a/style.css
+++ b/style.css
@@ -122,6 +122,17 @@ display: flex;
     text-shadow: 0px 0px 9px var(--color-gris);
     transform: scale(1.04);
   }
+
+  .flags{
+    width: 75px;
+    display: flex; 
+    align-items:flex-end;
+    justify-content: space-between;
+    background: transparent;
+  }
+  .flags__item{
+    width: 30px;
+  }
    
   
 /* SECCIÓN HOME */
