Actualizar color del encabezado h2 en style.css

--- a/style.css
+++ b/style.css
@@ -271,6 +271,7 @@ h1{
     font-weight: 420;
     padding: 15px ;
     margin-bottom: 1em;
+    color: var(--color-claro);
 }
 
 .contenido-seccion p {
